--- a/src/App.css
+++ b/src/App.css
@@ -31,10 +31,12 @@ li{
   transition-duration: 0.9;
 }
 .coupon{
+background-color:#98a06b;
 position:fixed;
 left:50%;
 z-index:100;
-transform:translate(-50%,0);
+/* top:30vh; */
+transform:translate(-50%,-50%);
 width:550px;
 height:400px;
 border-radius:2rem;
