--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@ li{
 .navLink:hover::after{
   transform: scaleX(1);
   transform-origin: left center;
-  transition-duration: 0.9;
+  transition: transform 0.9s ease-in-out;
 }
 .coupon{
 background-color:#98a06b;
@@ -260,17 +260,18 @@ a{
   
 }
 .dropMenu{
-  background-color:white;
-  position:absolute;
-  min-width:150px;
-  z-index:6;
-  top:50px;
-  line-height:38px;
-  padding:15px;
-  font-size:14px;
-  opacity:0;
-  visibility:hidden;
-  box-shadow:0px 0px 10px grey;
+  background-color: white;
+  position: absolute;
+  min-width: 150px;
+  z-index: 6;
+  left: 0;
+  line-height: 38px;
+  padding: 15px;
+  font-size: 14px;
+  opacity: 0;
+  visibility: hidden;
+  box-shadow: 0px 0px 10px grey;
+  transition: all 0.4s ease;
 }
 
 .megaLink>a{
@@ -625,6 +626,9 @@ a{
 
 @media (min-width: 960px){
   
+  .navLink .dropMenu{ 
+    visibility: hidden;
+  }
   .search{
     margin-left:10%;
     
@@ -632,15 +636,14 @@ a{
   .mobile_toggle_button{
     display:none;
   }
-  .nav_links li:hover .dropMenu{
-      opacity:1;
-      top:50px;
-      visibility:visible;
-      transition: all 0.4s ease;
+  .navLink:hover .dropMenu{
+    opacity: 1;
+    top: 38px;
+    visibility: visible;
+    transition: all 0.4s ease;
     }
     .drop_icon{
       display:hidden;
-
     }
     
     .megaLink:hover .motherChild_dropdown{
